force-app/main/default/objects/Employment_Contract__c/Employment_Contract__c.object-meta.xml
<CustomObject>
    <label>Employment Contract</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>