force-app/main/default/objects/Employment_Contract__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Employment Contracts</relationshipLabel>
    <relationshipName>Employment_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>