force-app/main/default/objects/Employment_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value>
            <value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>