force-app/main/default/objects/Employment_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full Time</fullName><default>false</default><label>Full Time</label></value>
            <value><fullName>Part Time</fullName><default>false</default><label>Part Time</label></value>
            <value><fullName>Contract</fullName><default>true</default><label>Contract</label></value>
            <value><fullName>Locum</fullName><default>false</default><label>Locum</label></value>
            <value><fullName>Per Diem</fullName><default>false</default><label>Per Diem</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>