force-app/main/default/objects/Employment_Contract__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employment Contracts</relationshipLabel>
    <relationshipName>Employment_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>