force-app/main/default/objects/Employment_Contract__c/fields/Employer_Account__c.field-meta.xml
<CustomField>
    <fullName>Employer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment Contracts</relationshipLabel>
    <relationshipName>Employment_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>