force-app/main/default/objects/Employment_Contract__c/fields/Identity_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Identity_Strategy__c</fullName>
    <label>Identity Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Reuse Existing Experience User</fullName><default>true</default><label>Reuse Existing Experience User</label></value>
            <value><fullName>Internal User</fullName><default>false</default><label>Internal User</label></value>
            <value><fullName>Hybrid</fullName><default>false</default><label>Hybrid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>