force-app/main/default/objects/Employment_Contract__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Employment Contracts</relationshipLabel>
    <relationshipName>Employment_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>