force-app/main/default/objects/Employment_Contract__c/fields/Offer_Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_On__c</fullName>
    <label>Offer Accepted On</label>
    <type>Date</type>
</CustomField>