force-app/main/default/objects/Employment_Contract__c/fields/Offered_On__c.field-meta.xml
<CustomField>
    <fullName>Offered_On__c</fullName>
    <label>Offered On</label>
    <type>Date</type>
</CustomField>