force-app/main/default/objects/Employment_Contract__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Experience Cloud</fullName><default>true</default><label>Experience Cloud</label></value>
            <value><fullName>Admin Console</fullName><default>false</default><label>Admin Console</label></value>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>